fix misaligned line numbers in file mode changes

--- a/styles/file-patch-view.less
+++ b/styles/file-patch-view.less
@@ -44,7 +44,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: @component-padding*2;
+    padding-top: @component-padding*2;
     padding: @component-padding/2;
     padding-left: @component-padding;
     border: 1px solid @base-border-color;
